fixed overflow issues

--- a/app/scss/_section.scss
+++ b/app/scss/_section.scss
@@ -1,16 +1,17 @@
 section {
-    //border: 1px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: auto;
-    max-width: 40rem;
+    max-width: 90%;
     padding: 0;
+    overflow: hidden;
 
     p {
         margin-top: 2rem;
         margin-bottom: 2rem;
+        max-width: 40rem;
     }
 }
 
